refactor: Complete backend overhaul – enterprise-grade refactoring (Phases 0-3)
This commit represents a comprehensive, end‑to‑end refactoring of the entire MyMindMirror backend. All planned phases have been completed, transforming the codebase from a legacy, bug‑prone, monolithic architecture into a modern, high‑performance, maintainable, and production‑ready system.

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📌 ARCHITECTURAL IMPROVEMENTS
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

▪ DTOs → Immutable Records
  - Converted ALL request/response DTOs from mutable Lombok @Data classes to Java records.
  - Removed custom constructors; moved complex parsing logic to mappers and helpers.

▪ MapStruct Mappers (Centralised Mapping)
  - Introduced mappers: JournalMapper, MilestoneMapper, TaskMapper, RoadmapMapper, ScheduleMapper, CustomTaskMapper, UserMapper.
  - Added JsonMapperHelper with @Named methods for consistent JSON↔List/Map conversion.
  - Removed ALL manual toDto() / toResponse() methods from services – replaced with one‑liner mapper calls.

▪ Service Decomposition (Single Responsibility)
  - Split JournalService into four focused services:
    • JournalPersistenceService – DB/CRUD, encryption, pagination.
    • JournalSearchService – keyword, mood, semantic search, RAG.
    • JournalReflectionService – daily reflection, chat, question generation.
    • JournalService – thin orchestrator with cache annotations.
  - All services now follow SRP and use mappers.

▪ Controller Cleanup
  - Replaced manual JWT parsing (HttpServletRequest) with @AuthenticationPrincipal / @CurrentUser.
  - Removed all try-catch blocks – exceptions now handled centrally by RestExceptionHandler.
  - Standardised all responses to concrete types (e.g., ResponseEntity<MilestoneResponse>).
  - Added @Valid validation to all request DTOs.

▪ Caching Fix (Redis Serialisation)
  - Changed CacheConfig from DefaultTyping.NON_FINAL to DefaultTyping.EVERYTHING.
  - Fixed InvalidTypeIdExc